--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,22 @@
 			<artifactId>spring-webflux</artifactId>
 			<version>5.3.23</version>
 		</dependency>
+		<dependency>
+			<groupId>com.github.tomakehurst</groupId>
+			<artifactId>wiremock</artifactId>
+			<version>2.27.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.wiremock</groupId>
+			<artifactId>wiremock-webhooks-extension</artifactId>
+			<version>2.34.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.github.ricall.junit5-wiremock</groupId>
+			<artifactId>junit5-wiremock</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
