--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Applikasjon for faggruppe Java</description>
 	<properties>
 		<java.version>17</java.version>
+		<spring.wiremock.version>3.1.1</spring.wiremock.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -77,7 +78,18 @@
 			<artifactId>junit5-wiremock</artifactId>
 			<version>2.0.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-contract-wiremock</artifactId>
+			<version>${spring.wiremock.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<scope>provided</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<build>
