--- a/src/test/resources/application-local.yaml
+++ b/src/test/resources/application-local.yaml
@@ -1,3 +1,13 @@
 spring:
   h2:
     console.enabled: true
+  datasource:
+    url: jdbc:h2:mem:mydb
+    username: sa
+    password: password
+    driverClassName: org.h2.Driver
+  jpa:
+    spring.jpa.database-platform: org.hibernate.dialect.H2Dialect
+app:
+  endpoints:
+    pokeApi: https://pokeapi.co/api/v2/
